Upload on Server

--- a/Badammi/contact.html
+++ b/Badammi/contact.html
@@ -10,7 +10,7 @@
         <meta name="description" content="agency, ecommerce">
         <meta name="author" content="Md. Siful Islam, Jtheme">
 
-        <title>Naturix</title>
+        <title>Badammi</title>
 
         <!-- Favicon -->
         <link rel="apple-touch-icon" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
@@ -67,7 +67,7 @@
                                 <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" >Dried products</a> 
                                     <ul class="dropdown-menu"> </ul> 
                                 </li> 
-                                <li><a href="contact.html">Contact Us</a></li>   
+                                <li><a href="">Contact Us</a></li>   
                                         </li> 
                                     </ul>
                                 </li>
@@ -207,10 +207,14 @@
 
         <script>
 document.addEventListener("DOMContentLoaded", async () => {
-    const apiUrl = "http://localhost:5279/Fruits/GetAllFruits";
+    const apiUrl = "hhttp://0.0.0.0:8080/Fruits/GetAllFruits";
 
     try {
-        const response = await fetch(apiUrl);
+        const response = await fetch(apiUrl, {
+            headers: {
+                "ngrok-skip-browser-warning": "true"
+            }
+        });
         if (!response.ok) throw new Error("Ошибка загрузки API");
         const fruits = await response.json();
 
@@ -238,12 +242,12 @@ document.addEventListener("DOMContentLoaded", async () => {
             const driedFruits = fruits.filter(f => f.name.toLowerCase().includes("dried"));
             driedFruits.forEach(fruit => {
                 const li = document.createElement("li");
-                li.innerHTML = `<a href="shop-single.html?id=${fruit.id}">${fruit.name}</a>`;
+                li.innerHTML = `<a class="fix-a" href="shop-single.html?id=${fruit.id}">${fruit.name}</a>`;
                 driedMenu.appendChild(li);
             });
 
             const allLi = document.createElement("li");
-            allLi.innerHTML = `<a href="shop-2.html"><strong>All catalog</strong></a>`;
+            allLi.innerHTML = `<a class="fix-a" href="shop-2.html"><strong>All catalog</strong></a>`;
             driedMenu.appendChild(allLi);
         }
 
@@ -255,12 +259,12 @@ document.addEventListener("DOMContentLoaded", async () => {
             const freshFruits = fruits.filter(f => !f.name.toLowerCase().includes("dried"));
             freshFruits.forEach(fruit => {
                 const li = document.createElement("li");
-                li.innerHTML = `<a href="shop-single.html?id=${fruit.id}">${fruit.name}</a>`;
+                li.innerHTML = `<a class="fix-a" href="shop-single.html?id=${fruit.id}">${fruit.name}</a>`;
                 freshMenu.appendChild(li);
             });
 
             const allFreshLi = document.createElement("li");
-            allFreshLi.innerHTML = `<a href="shop-1.html"><strong>All catalog</strong></a>`;
+            allFreshLi.innerHTML = `<a class="fix-a" href="shop-1.html"><strong>All catalog</strong></a>`;
             freshMenu.appendChild(allFreshLi);
         }
 
