--- a/Badammi/about-us.html
+++ b/Badammi/about-us.html
@@ -10,7 +10,7 @@
         <meta name="description" content="agency, ecommerce">
         <meta name="author" content="Md. Siful Islam, Jtheme">
 
-        <title>Naturix</title>
+        <title>Badammi</title>
 
         <!-- Favicon -->
         <link rel="apple-touch-icon" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
@@ -59,7 +59,7 @@
                                 <li class="dropdown active">
                                     <a href="index.html">Home</a>                                            
                                 </li> 
-                                <li><a href="about-us.html">About Us</a></li>
+                                <li><a href="#">About Us</a></li>
                                <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" >Fresh products</a> 
                                     <ul id="fresh"class="dropdown-menu"> </ul> 
                                 </li>
@@ -323,10 +323,14 @@
 
 <script>
 document.addEventListener("DOMContentLoaded", async () => {
-    const apiUrl = "http://localhost:5279/Fruits/GetAllFruits";
+    const apiUrl = "http://0.0.0.0:8080/Fruits/GetAllFruits";
 
     try {
-        const response = await fetch(apiUrl);
+        const response = await fetch(apiUrl, {
+            headers: {
+                "ngrok-skip-browser-warning": "true"
+            }
+        });
         if (!response.ok) throw new Error("Ошибка загрузки API");
         const fruits = await response.json();
 
@@ -354,12 +358,12 @@ document.addEventListener("DOMContentLoaded", async () => {
             const driedFruits = fruits.filter(f => f.name.toLowerCase().includes("dried"));
             driedFruits.forEach(fruit => {
                 const li = document.createElement("li");
-                li.innerHTML = `<a href="shop-single.html?id=${fruit.id}">${fruit.name}</a>`;
+                li.innerHTML = `<a class="fix-a" href="shop-single.html?id=${fruit.id}">${fruit.name}</a>`;
                 driedMenu.appendChild(li);
             });
 
             const allLi = document.createElement("li");
-            allLi.innerHTML = `<a href="shop-2.html"><strong>All catalog</strong></a>`;
+            allLi.innerHTML = `<a class="fix-a" href="shop-2.html"><strong>All catalog</strong></a>`;
             driedMenu.appendChild(allLi);
         }
 
@@ -371,12 +375,12 @@ document.addEventListener("DOMContentLoaded", async () => {
             const freshFruits = fruits.filter(f => !f.name.toLowerCase().includes("dried"));
             freshFruits.forEach(fruit => {
                 const li = document.createElement("li");
-                li.innerHTML = `<a href="shop-single.html?id=${fruit.id}">${fruit.name}</a>`;
+                li.innerHTML = `<a class="fix-a" href="shop-single.html?id=${fruit.id}">${fruit.name}</a>`;
                 freshMenu.appendChild(li);
             });
 
             const allFreshLi = document.createElement("li");
-            allFreshLi.innerHTML = `<a href="shop-1.html"><strong>All catalog</strong></a>`;
+            allFreshLi.innerHTML = `<a class="fix-a" href="shop-1.html"><strong>All catalog</strong></a>`;
             freshMenu.appendChild(allFreshLi);
         }
 
