--- a/Badammi/index.html
+++ b/Badammi/index.html
@@ -71,11 +71,12 @@
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" >Home</a>                                            
                                 </li> 
                                 <li><a href="about-us.html">About Us</a></li>
-                                <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" >Fresh products</a> 
+                                <li class="dropdown"> 
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" >Fresh products</a> 
                                     <ul id="fresh"class="dropdown-menu"> </ul> 
                                 </li>
-                                <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" >Dried products</a> 
-                                    <ul class="dropdown-menu"> </ul> 
+                                <li class="dropdown" > <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" >Dried products</a> 
+                    
                                 </li>
                                 <li><a href="contact.html">Contact Us</a></li>   
                                         </li> 
@@ -84,10 +85,7 @@
                             </ul>                           
                         </nav>
                     </div>
-
-                        <div class="responsive-toggle fa fa-bars"> </div>
-                    </div>
-
+                <div class="responsive-toggle fa fa-bars"> </div>
                 </div>  
             </header>
             <!-- / Main Header Ends -->   
@@ -329,10 +327,14 @@
 
         <script>
 document.addEventListener("DOMContentLoaded", async () => {
-    const apiUrl = "http://localhost:5279/Fruits/GetAllFruits";
+    const apiUrl = "http://0.0.0.0:8080/Fruits/GetAllFruits";
 
     try {
-        const response = await fetch(apiUrl);
+        const response = await fetch(apiUrl, {
+            headers: {
+                "ngrok-skip-browser-warning": "true"
+            }
+        });
         if (!response.ok) throw new Error("Ошибка загрузки API");
         const fruits = await response.json();
 
@@ -360,12 +362,12 @@ document.addEventListener("DOMContentLoaded", async () => {
             const driedFruits = fruits.filter(f => f.name.toLowerCase().includes("dried"));
             driedFruits.forEach(fruit => {
                 const li = document.createElement("li");
-                li.innerHTML = `<a href="shop-single.html?id=${fruit.id}">${fruit.name}</a>`;
+                li.innerHTML = `<a class="fix-a" href="shop-single.html?id=${fruit.id}">${fruit.name}</a>`;
                 driedMenu.appendChild(li);
             });
 
             const allLi = document.createElement("li");
-            allLi.innerHTML = `<a href="shop-2.html"><strong>All catalog</strong></a>`;
+            allLi.innerHTML = `<a href="shop-2.html" class="fix-a"><strong>All catalog</strong></a>`;
             driedMenu.appendChild(allLi);
         }
 
@@ -377,12 +379,12 @@ document.addEventListener("DOMContentLoaded", async () => {
             const freshFruits = fruits.filter(f => !f.name.toLowerCase().includes("dried"));
             freshFruits.forEach(fruit => {
                 const li = document.createElement("li");
-                li.innerHTML = `<a href="shop-single.html?id=${fruit.id}">${fruit.name}</a>`;
+                li.innerHTML = `<a class="fix-a" href="shop-single.html?id=${fruit.id}">${fruit.name}</a>`;
                 freshMenu.appendChild(li);
             });
 
             const allFreshLi = document.createElement("li");
-            allFreshLi.innerHTML = `<a href="shop-1.html"><strong>All catalog</strong></a>`;
+            allFreshLi.innerHTML = `<a class="fix-a" href="shop-1.html"><strong>All catalog</strong></a>`;
             freshMenu.appendChild(allFreshLi);
         }
 
@@ -391,5 +393,6 @@ document.addEventListener("DOMContentLoaded", async () => {
     }
 });
 </script>
+
     </body>
 </html>
