Change Sing Shop\Change Data

--- a/Badammi/contact.html
+++ b/Badammi/contact.html
@@ -207,7 +207,7 @@
 
         <script>
 document.addEventListener("DOMContentLoaded", async () => {
-    const apiUrl = "http://40.83.191.148:5000/Fruits/GetAllFruits";
+    const apiUrl = "http://localhost:8080/Fruits/GetAllFruits";
 
     try {
         const response = await fetch(apiUrl, {
