--- a/Badammi/shop-2.html
+++ b/Badammi/shop-2.html
@@ -213,7 +213,7 @@
         <script src="assets/js/theme.js"></script>
 
         <script>
-const apiUrl = "http://40.83.191.148:5000/Fruits/GetAllFruits";
+const apiUrl = "http://localhost:8080/Fruits/GetAllFruits";
 
 async function loadProducts() {
     console.log("test");
@@ -244,7 +244,7 @@ async function loadProducts() {
 
         // Асинхронная загрузка изображений
         for (const fruit of filteredFruits) {
-            const photoResponse = await fetch(`http://40.83.191.148:5000/photos/71100053.png`, {
+            const photoResponse = await fetch(`http://localhost:8080/photos/${fruit.id}.png`, {
                 headers: {
                     "ngrok-skip-browser-warning": "true"
                 }
@@ -331,7 +331,7 @@ async function hidelist() {
         
 <script>
 document.addEventListener("DOMContentLoaded", async () => {
-    const apiUrl = "http://40.83.191.148:5000/Fruits/GetAllFruits";
+    const apiUrl = "http://localhost:8080/Fruits/GetAllFruits";
 
     try {
         const response = await fetch(apiUrl, {
@@ -397,6 +397,18 @@ document.addEventListener("DOMContentLoaded", async () => {
     }
 });
 </script>
+<style>
+.prod-img {
+    width: 350px;
+    height: 300px;
+    object-fit: cover;
+}
+.images img {
+    width: 250px;
+    height: 250px;
+    object-fit: cover;
+}
+</style>
 
     </body>
 </html>
