--- a/Badammi/shop-1.html
+++ b/Badammi/shop-1.html
@@ -388,6 +388,10 @@ document.addEventListener("DOMContentLoaded", async () => {
     }
 });
 </script>
-
+<style>
+    .product-media {
+    background-color: #fff;
+}
+</style>
     </body>
 </html>
