--- a/Badammi/shop-single.html
+++ b/Badammi/shop-single.html
@@ -487,10 +487,6 @@ document.addEventListener("DOMContentLoaded", async () => {
     border-radius: 16px 16px 0 0;
 }
 
-.product-media img:hover {
-    transform: scale(1.05);
-}
-
 .product-caption {
     flex: 1;
     display: flex;
@@ -516,9 +512,15 @@ document.addEventListener("DOMContentLoaded", async () => {
 }
 
 .product-box:hover {
-    transform: translateY(-5px);
+    transform: translateY(-15px);
     box-shadow: 0 8px 18px rgba(0,0,0,0.25);
 }
+
+.product-media img:hover {
+    transform: scale(1.3);
+    box-shadow: 0 8px 18px rgba(0,0,0,0.25);
+}
+
 
 .product-media img {
     border-radius: 16px 16px 0 0; /* скругляем только верхнюю часть картинки */
@@ -802,5 +804,10 @@ $(document).ready(function () {
     });
 });
 </script>
+<style>
+    .product-media {
+    background-color: #fff;
+}
+</style>
     </body>
 </html>
