--- a/Badammi/about-us.html
+++ b/Badammi/about-us.html
@@ -323,7 +323,7 @@
 
 <script>
 document.addEventListener("DOMContentLoaded", async () => {
-    const apiUrl = "http://localhost:8080/Fruits/GetAllFruits";
+    const apiUrl = "http://40.83.191.148:5000/Fruits/GetAllFruits";
 
     try {
         const response = await fetch(apiUrl, {
