--- a/Badammi/shop-1.html
+++ b/Badammi/shop-1.html
@@ -204,7 +204,7 @@
         <script src="assets/js/theme.js"></script>
 
         <script>
-const apiUrl = "http://localhost:8080/Fruits/GetAllFruits";
+const apiUrl = "http://40.83.191.148:5000/Fruits/GetAllFruits";
 
 async function loadProducts() {
     console.log("test");
@@ -235,7 +235,7 @@ async function loadProducts() {
 
         // Асинхронная загрузка изображений с заголовком
         for (const fruit of filteredFruits) {
-            const photoResponse = await fetch(`http://localhost:8080/photos/${fruit.id}.png`, {
+            const photoResponse = await fetch(`http://40.83.191.148:5000/photos/${fruit.id}.png`, {
                 headers: {
                     "ngrok-skip-browser-warning": "true"
                 }
@@ -322,7 +322,7 @@ async function hidelist() {
         
 <script>
 document.addEventListener("DOMContentLoaded", async () => {
-    const apiUrl = "http://localhost:8080/Fruits/GetAllFruits";
+    const apiUrl = "http://40.83.191.148:5000/Fruits/GetAllFruits";
 
     try {
         const response = await fetch(apiUrl, {
