--- a/Badammi/shop-single.html
+++ b/Badammi/shop-single.html
@@ -196,7 +196,7 @@ $(document).ready(function () {
             const fruitId = new URLSearchParams(window.location.search).get("id");
             if (!fruitId) return console.warn("❌ Id не найден в URL");
 
-            const apiUrl = `http://localhost:8080/Fruits/ShopOne?id=${fruitId}`;
+            const apiUrl = `http://40.83.191.148:5000/Fruits/ShopOne?id=${fruitId}`;
             const response = await fetch(apiUrl, { headers: { "ngrok-skip-browser-warning": "true" } });
             if (!response.ok) throw new Error("Ошибка загрузки данных: " + response.status);
             const fruit = await response.json();
@@ -217,7 +217,7 @@ $(document).ready(function () {
             mainSlider.empty();
             thumbSlider.empty();
 
-            const mainImgUrl = `http://localhost:8080/photos/${fruit.id}.png`;
+            const mainImgUrl = `http://40.83.191.148:5000/photos/${fruit.id}.png`;
             const thumbnails = [mainImgUrl];
 
 function addLineBreaks(text, wordsPerLine = 3) {
@@ -236,7 +236,7 @@ function addLineBreaks(text, wordsPerLine = 3) {
                 
                 fruit.childPhotoPath.forEach((_, index) => {
                     const processedComposition = addLineBreaks(fruit.childPhotoText[index], 3);
-                    const imgUrl = `http://localhost:8080/photos/${fruit.id}_${index + 1}.png`;
+                    const imgUrl = `http://40.83.191.148:5000/photos/${fruit.id}_${index + 1}.png`;
                     thumbnails.push(imgUrl);
                     const card = `
                 <div class="col-lg-3 col-md-4 col-sm-6"> 
@@ -350,7 +350,7 @@ function addLineBreaks(text, wordsPerLine = 3) {
 
 // === Загрузка всех фруктов для меню ===
 document.addEventListener("DOMContentLoaded", async () => {
-    const apiUrl = "http://localhost:8080/Fruits/GetAllFruits";
+    const apiUrl = "http://40.83.191.148:5000/Fruits/GetAllFruits";
 
     try {
         const response = await fetch(apiUrl, { headers: { "ngrok-skip-browser-warning": "true" } });
